# servicemp3epl

./: README.md  configure.ac
m4/: ax_python_devel.m4
plugin/: plugin.py
servicemp3/: Makefile.am  m3u8.cpp  pythonmodule.cpp  servicelibpl.cpp  servicelibpl.h  servicemp3.cpp  servicemp3.cpp.org  servicemp3.h
